# Wavec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  W2V.md
scripts/: prepare.py  prepare_thuc.py  segment.sh  train.sh
src/: ft_wav.cc  ft_wav.h  kmeans.cc  sim.cc
